	Fixed bug where style attribute data would get messed up in advimage dialog.
	Fixed bug where the table dialogs class select wasn't updated correctly.
	Fixed bug where elements would get extra whitespace around on insert when body was present in valid_elements.
	Fixed bug where coords attribute of the area element wasn't handled properly in IE.
	Fixed so pointless style information for borders gets removed in IE.
	Fixed so the resize button has a se-resize cursor css value.
Version 3.0rc2 (2008-01-18)
	Added new fix_nesting option to fix bug #1867292, this is disabled by default.
	Added new indentation option enables you to specify how much each indent/outdent call will add/remove.
	Added easier support for enabling/disabling icon columns on drop menues.
	Added new menu button control class. This control is very similar to the splitbutton but without any onclick action.
	Added support for previous tab focus (shift+tab). The tab_focus setting now takes two items next and previous element.
	Fixed bug where iframes inside the editor got removed in Firefox on initial load.
	Fixed bug where the CSS for abbr elements wasn't applied correctly in IE.
	Fixed bug where mceAddControl on element inside a hidden container produced errors.
	Fixed bug where closed anchors like <a /> produced strange results.
	Fixed bug where caret would jump to the top of the editor if enter was pressed a the end of a list.
	Fixed bug where remove editor failed if the editor wasn't properly initialized.
	Fixed bug where render call on for a non existing element produced exception.
	Fixed bug where parent window was hidden when the color picker was used in a non inlinepopups setup.
	Fixed bug where onchange event wasn't fired correctly on IE when color picker was used in dialogs.
	Fixed bug where save plugin could not save contents if the converted element wasn't an textarea.
	Fixed bug where events might be fired even after an editor instance was removed such as blur events.